learnign more about closures

--- a/closures/closute.html
+++ b/closures/closute.html
@@ -25,6 +25,7 @@
       x(function y() {
         console.log("hello world");
       });
+      //closures can also be used for data privacy data hiding and encapsulation
     </script>
   </body>
 </html>
