learnt deep about closures

--- a/closures/closute.html
+++ b/closures/closute.html
@@ -8,24 +8,6 @@
   <body>
     <h2>closures</h2>
     <p>closures are function together bundled with lexical environment</p>
-    <script>
-      //function x(){
-      //  let a = 7;
-      //function y(){
-      //  console.log(a);
-      //}
-      // y()
-      //}
-      //x();
-      function x(y) {
-        var a = 9;
-        console.log(y);
-        y();
-      }
-      x(function y() {
-        console.log("hello world");
-      });
-      //closures can also be used for data privacy data hiding and encapsulation
-    </script>
+    <script src="closure.js"></script>
   </body>
 </html>
